Upgrade to Java 21 + Spring Boot 3.4.1 and add politician tracking
Major changes:
- Upgrade Gradle 6.3 → 8.12, Spring Boot 2.2.6 → 3.4.1, Kotlin 2.1.0
- Migrate javax.persistence → jakarta.persistence
- Add PresovCouncilMemberCrawlerV2 for new presov.sk website structure
- Add PoliticianRepository with party/club switcher queries
- Add PoliticiansController with /politicians/party-switchers endpoint
- Update SyncAgent to reuse Politicians across seasons
- Fix DMParser: "Materiály" diacritics, robust component parsing
- Add DataSeeder for dev profile with H2 database
- Add CLAUDE.md for project context

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>